// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EncompassConnect batchLoanUpdate makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loanBatch/updateRequests",
  Object {
    "body": "{\\"loanGuids\\":[\\"test-1\\",\\"test-2\\"],\\"loanData\\":{\\"key1\\":\\"value1\\",\\"key2\\":\\"value2\\"}}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "POST",
  },
]
`;

exports[`EncompassConnect batchLoanUpdate returns a BatchUpdate object that can fetch its status 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loanBatch/updateRequests/9876",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`EncompassConnect getCanonicalNames fetches with the correct request options 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loanPipeline/fieldDefinitions",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`EncompassConnect getToken uses the provided username and password over the ones in the constructor to create a token 1`] = `
Array [
  "https://api.elliemae.com/oauth2/v1/token",
  Object {
    "body": "grant_type=password&username=PROVIDED_USERNAME%40encompass%3A%3CINSTANCE+ID%3E&password=PROVIDED_PASSWORD&client_id=%3CCLIENT+ID%3E&client_secret=%3CAPI+SECRET%3E",
    "headers": Object {
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "POST",
    "redirect": "follow",
  },
]
`;

exports[`EncompassConnect getToken uses the username and password from the constructor to create a token if none are provided 1`] = `
Array [
  "https://api.elliemae.com/oauth2/v1/token",
  Object {
    "body": "grant_type=password&username=%3CCONSTRUCTOR+USERNAME%3E%40encompass%3A%3CINSTANCE+ID%3E&password=%3CCONSTRUCTOR+PASSWORD%3E&client_id=%3CCLIENT+ID%3E&client_secret=%3CAPI+SECRET%3E",
    "headers": Object {
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "POST",
    "redirect": "follow",
  },
]
`;

exports[`EncompassConnect loans delete makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "DELETE",
  },
]
`;

exports[`EncompassConnect loans get makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`EncompassConnect loans update makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>?appendData=false&persistent=transient&view=entity",
  Object {
    "body": "{\\"applications\\":[{\\"id\\":\\"borrower_1\\",\\"borrower\\":{\\"firstName\\":\\"Todd\\",\\"lastName\\":\\"Chavez\\"}}]}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "PATCH",
  },
]
`;

exports[`EncompassConnect loans updateWithGeneratedContract makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>?appendData=false&persistent=transient&view=entity",
  Object {
    "body": "{\\"testContract\\":\\"<GENERATE CONTRACT RESPONSE>\\",\\"customFields\\":[{\\"fieldName\\":\\"CX.TEST.FIELD\\",\\"stringValue\\":\\"test value\\"}]}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "PATCH",
  },
]
`;

exports[`EncompassConnect milestones assign calls the update milestone associate API with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>/associates/<MATCHING MILESTONE ID>",
  Object {
    "body": "{\\"loanAssociateType\\":\\"User\\",\\"id\\":\\"<PROVIDED USER ID>\\"}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "PUT",
  },
]
`;

exports[`EncompassConnect milestones get makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>/milestones",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`EncompassConnect milestones update calls the update milestone associate API with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loans/<MOCK GUID VALUE>/milestones/<MATCHING MILESTONE ID>",
  Object {
    "body": "{\\"provided\\":\\"options\\"}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "PATCH",
  },
]
`;

exports[`EncompassConnect request fetches with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1test/url",
  Object {
    "body": "{\\"some\\":\\"value\\"}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "POST",
  },
]
`;

exports[`EncompassConnect schemas generateContract makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/schema/loan/contractGenerator",
  Object {
    "body": "{\\"2\\":\\"10000\\",\\"317\\":\\"Todd Chavez\\"}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "POST",
  },
]
`;

exports[`EncompassConnect schemas getLoanSchema makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/schema/loan",
  Object {
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
  },
]
`;

exports[`EncompassConnect viewPipeline makes the API call with the correct information 1`] = `
Array [
  "https://api.elliemae.com/encompass/v1/loanPipeline",
  Object {
    "body": "{\\"filter\\":{\\"operator\\":\\"and\\",\\"terms\\":[]},\\"fields\\":[\\"test.field\\"]}",
    "headers": Object {
      "Authorization": "Bearer <MOCK TOKEN VALUE>",
    },
    "method": "POST",
  },
]
`;
